Added API connectivity and utilities.

--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
 DB_NAME="foodtruck_db"
 DB_USER="root"
 DB_PASSWORD="He@rt2<3"
+
+CLOUD_NAME="dcjz6vl08"
+API_KEY="829582748195418"
+API_SECRET="RvcMzWoUzk7IjNSyQvS5750HgMY"
+
+SESS_SECRET="Very Secret"
