--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "bulma": "^0.9.4",
+    "cloudinary": "^1.41.1",
     "connect": "^3.7.0",
     "connect-session-sequelize": "^7.1.7",
     "dotenv": "^16.3.1",
@@ -9,7 +12,6 @@
     "express-session": "^1.17.3",
     "handlebars": "^4.7.8",
     "mysql2": "^3.6.5",
-    "path": "^0.12.7",
     "sequelize": "^6.35.2",
     "session": "^0.1.0"
   }
